# skillgregistry

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DB_REVIEW.md  E2E_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  api_tests.http  config.toml  docker-compose.test.yml  docker-compose.yml
.agent/skills/temporal-rust-sdk/: SKILL.md
.agent/skills/temporal-rust-sdk/examples/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/batch-sliding-window/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/batch-sliding-window/src/: main.rs
.agent/skills/temporal-rust-sdk/examples/examples-shared/src/: lib.rs
.agent/skills/temporal-rust-sdk/examples/helloworld/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/helloworld/src/: main.rs
.agent/skills/temporal-rust-sdk/examples/localactivity/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/localactivity/src/: main.rs
.agent/skills/temporal-rust-sdk/examples/saga/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/saga/src/: main.rs
.agent/skills/temporal-rust-sdk/examples/struct-activity/: Cargo.toml
.agent/skills/temporal-rust-sdk/examples/struct-activity/src/: main.rs
.agent/skills/temporal-rust-sdk/reference/: ACTIVITY.md  ACTIVITY_REGISTRATION.md  README.md  WORKER.md
.agent/skills/temporal-rust-sdk/src/: Cargo.toml  README.md  lib.rs
.agents/skills/claude-light-worker/: SKILL.md
.agents/skills/claude-light-worker/agents/: openai.yaml
.agents/skills/claude-light-worker/scripts/: extract_result.py  run_parallel_workers.sh
.agents/skills/rust-unit-test-writer/: SKILL.md
.agents/skills/rust-unit-test-writer/agents/: openai.yaml
.agents/skills/temporal-rust-sdk/agents/: openai.yaml
.agents/skills/temporal-rust-sdk/examples/: Cargo.toml
.agents/skills/temporal-rust-sdk/examples/batch-sliding-window/: Cargo.toml
.agents/skills/temporal-rust-sdk/examples/batch-sliding-window/src/: main.rs
.agents/skills/temporal-rust-sdk/examples/examples-shared/: Cargo.toml
.agents/skills/temporal-rust-sdk/examples/saga/src/: main.rs
.agents/skills/temporal-rust-sdk/reference/: ACTIVITY.md  CLIENT.md  WORKFLOW.md
.agents/skills/temporal-rust-sdk/scripts/: smoke_check.sh
.agents/skills/temporal-rust-sdk/src/: Cargo.toml
.claude/skills/: temporal-rust-sdk
.github/workflows/: ci.yml  docker-publish.yml  e2e.yml
.trae/: skills
.trae/documents/: Create Temporal Rust SDK Example & Documentation.md  Enhance Discovery with Code Search and Blacklist.md  Implementation Plan_ Skill Registry List & Detail Pages.md  Refactor Worker for SQLite and Implement Core Tasks.md  Skill Registry System Implementation Plan.md
backend/: .dockerignore  Cargo.toml  Dockerfile  skillregistry.toml  verify_api.sh
backend/api/: Cargo.toml
backend/api/src/: auth.rs  handlers.rs  main.rs  models.rs  origin.rs
backend/api/src/auth/: dto.rs  extractor.rs
backend/common/: Cargo.toml
backend/common/src/: builders.rs  config.rs  db.rs  github.rs  lib.rs  s3.rs  settings.rs
backend/common/src/config/: settings.rs
backend/common/src/domain/: archive.rs  json.rs  markdown.rs  mod.rs  skill.rs
backend/common/src/entities/: AGENTS.md  auth_identities.rs  blacklist.rs  discovery_registries.rs  local_credentials.rs  mod.rs  org_memberships.rs  organizations.rs  plugin_components.rs  plugin_versions.rs  plugins.rs  prelude.rs  refresh_tokens.rs  skill_registry.rs  skill_versions.rs  skills.rs  sso_connections.rs  sso_identities.rs  task_logs.rs  users.rs
backend/common/src/infra/: github_http.rs  mod.rs  s3.rs
backend/common/src/persistence/: db.rs
backend/common/src/persistence/entities/: mod.rs
backend/common/src/repositories/: discovery_registries.rs  mod.rs  plugins.rs  registry.rs  skills.rs
backend/common/src/services/: discovery_registries.rs  github.rs  mod.rs  plugins.rs  registry.rs  skills.rs
backend/e2e-tests/: Cargo.toml
backend/e2e-tests/src/: lib.rs  test_harness.rs  test_scenarios.rs
backend/e2e-tests/tests/: e2e.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240203_000001_create_tables.rs  m20260203_160608_create_tables.rs  m20260204_000001_repo_types_and_plugins.rs  m20260204_120001_create_auth_and_sso.rs  m20260205_000001_create_all_tables.rs  m20260207_000002_add_api_url_to_discovery_registries.rs
backend/migration/tests/: schema_validation_tests.rs
backend/setup/: Cargo.toml
backend/setup/src/: main.rs
backend/tests/: integration_test.rs
backend/tests/e2e/: mod.rs  test_scenarios.rs
backend/worker/: Cargo.toml  agents.md
backend/worker/src/: contracts.rs  github.rs  index_flow_tests.rs  main.rs  ports.rs
backend/worker/src/activities/: discovery.rs  sync.rs
backend/worker/src/activities/sync/: domain.rs  download.rs  marketplace.rs  mod.rs  standalone.rs  utils.rs
backend/worker/src/bootstrap/: context.rs  mod.rs  register.rs  temporal.rs
backend/worker/src/sync/: domain.rs  download.rs  marketplace.rs  mod.rs  standalone.rs  utils.rs
backend/worker/src/tasks/: discovery.rs  sync.rs
backend/worker/src/workflows/: discovery_workflow.rs  main_workflow.rs  mod.rs  sync_repo_workflow.rs  sync_scheduler_workflow.rs  trigger_registry_workflow.rs
docs/: BACKEND_ARCHITECTURE_NOTE.md  CONTRIB.md  DOCKER_COMMANDS.md  E2E_TESTING.md  E2E_TEST_DESIGN.md  E2E_TEST_EXAMPLES.md  RUNBOOK.md  UI_NEXT_ITERATION_BACKEND.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/pages/: AuthCallback.tsx  DiscoveryRegistries.tsx  Login.tsx  Register.tsx  SkillDetail.tsx  SkillList.tsx
frontend/src/types/: axios.d.ts
scripts/: coverage_summary.py  run-e2e-tests.sh
src/: main.rs
