[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid" ] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
base64 = "0.22"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
migration = { path = "../migration" }
