[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "with-uuid" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
aws-sdk-s3 = "1.10.0"
aws-config = "1.1.0"
aws-smithy-types = "1.1.0" 
aws-types = "1.1.0"
aws-credential-types = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
hex = "0.4"
walkdir = "2.4"
zip = "0.6"
base64 = "0.21"
clap = { version = "4.4", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
