[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
