[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
common = { path = "../common" }
aws-config = "1.1.0"
aws-sdk-s3 = "1.10.0"
aws-types = "1.1.0"
aws-credential-types = "1.1.0"

# Temporal dependencies
# Keep these in sync with worker/setup crates.
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-client = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }

[[test]]
name = "e2e"
path = "tests/e2e.rs"
