[package]
edition      = "2021"
name         = "migration"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
]
version = "2.0.0-rc.30"

[dev-dependencies]
common = { path = "../common" }
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
