[package]
name = "setup"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
migration = { path = "../migration" }
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
temporalio-client = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
url = "2.2"
aws-sdk-s3 = "1.10.0"
aws-config = "1.1.0"
aws-types = "1.1.0"
