[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zip = "0.6"
walkdir = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "mock" ] }
chrono = { version = "0.4", features = ["serde"] }
uuid = "1.0"
md5 = "0.7"
hex = "0.4"
async-trait = "0.1"
dotenv = "0.15.0"

[dev-dependencies]
mockall = "0.11"
