[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
zip = "0.6"
walkdir = "2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock" ] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.7"
hex = "0.4"
async-trait = "0.1"
dotenv = "0.15.0"
url = "2.5"

# Temporal Dependencies
temporalio-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-client = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
futures = "0.3"

# AWS SDK
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-types = "1.0"
aws-credential-types = "1.0"
hostname = "0.4.2"


[dev-dependencies]
mockall = "0.11"
migration = { path = "../migration" }
