[package]
name = "temporal-sdk-helpers"
version = "0.1.0"
edition = "2021"
description = "Helper utilities for Temporal Rust SDK - Simplified Activity registration"
authors = ["Agent Skill Registry"]
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Temporal SDK dependencies
temporalio-sdk = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", rev = "f837d73ec1908679573ced8734e9a778f89956aa" }

[dev-dependencies]
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
