[package]
name = "examples-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["time"] }

temporalio-client = { git = "https://github.com/temporalio/sdk-core", branch = "master" }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", branch = "master" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", branch = "master" }
